# ocr-dataset-builder

./: .cursorfile  .env.example  .gitignore  Dockerfile  MILESTONES.md  README.md  install-conda-env.sh  pyproject.toml
docs/: DATASET_INTEGRATION_GUIDE.md  DATA_FORMATS.md  DEBUG_LOG_OCR_MISMATCH.md  DESIGN.md  FRAME_REFERENCING_NOTATION.md  MILESTONES.md  PIPELINE_GUIDE.md  TEXT_DATASET_EXTRACTION_GUIDE.md  TEXT_LLM_PIPELINE_GUIDE.md
ocr_dataset_builder/: extract_text_dataset.py  frame_pipeline.py  llm_pipeline.py  llm_processing.py  ocr_augmentations.py  ocr_utils.py  pipeline.py  pytorch_dataset.py  tesseract_pipeline.py  tesseract_processing.py  video_processing.py
ocr_dataset_builder/data/: extract_text_dataset.py  pytorch_dataset.py
ocr_dataset_builder/examples/: example-vertex.py
ocr_dataset_builder/llm/: __init__.py  image_pipeline.py  pipeline.py  processing.py  text_pipeline.py  text_processing.py
ocr_dataset_builder/llm/utils/: calculate_cost_stats.py  costing.py
ocr_dataset_builder/prompts/: __init__.py  ocr_image_multi_task_prompt.md  ocr_text_refinement_prompt.md
ocr_dataset_builder/tesseract/: __init__.py  ocr_utils.py  pipeline.py  processing.py
ocr_dataset_builder/video/: __init__.py  frame_pipeline.py  processing.py
